# mypkg

./: .readthedocs.yml  CHANGELOG.md  pyproject.toml
docs/: conf.py
